BoardViewerTest is finally done